我觉得继承没有用，同时linkedhashmap里面的迭代器本来计划指向double_list的迭代器，但是好像有一些多余

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "system_error": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "memory_resource": "cpp"
     }
 }
